Fix the alignment

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ header {
   background-color: #f2f2f2;
   position: sticky;
   top: 0;
+  text-align: center;
   z-index: 1000;
 }
 
@@ -24,6 +25,10 @@ p,
 caption,
 footer small {
   color: #021e73;
+}
+
+.nav {
+  text-align: center;
 }
 
 .nav a,
@@ -51,6 +56,16 @@ footer a {
   border: 3px solid #010440;
 }
 
+.btn:hover {
+  background-color: #0048b9;
+  border: 3px solid #0048b9;
+}
+
+.support,
+.copyright {
+  text-align: center;
+}
+
 footer {
   background-color: #f2f2f2;
 }
@@ -61,6 +76,7 @@ footer img {
 
 .social {
   display: flex;
+  justify-content: center;
 }
 
 .social img {
@@ -125,4 +141,23 @@ td {
 .learn-more:hover {
   color: #010440;
   text-decoration: underline;
+}
+
+@media only screen and (min-width: 38em) {
+
+  .support,
+  .copyright {
+    text-align: left;
+  }
+
+  .nav {
+    text-align: right;
+  }
+
+  .card {
+    margin-right: 1rem;
+  }
+
+
+
 }
